[package]
name = "sgf"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", default-features = false, features = [
	"form",
	"http1",
	"json",
	"matched-path",
	"original-uri",
	"query",
	"tokio",
	"tower-log",
] }
sgf-parse = "4.2.2"
tokio = "1.44.2"
tower-http = { version = "0.6.2", features = ["fs"] }
walkdir = "2.5.0"
